docs/api/qiskit/0.45/qiskit.circuit.library.U2Gate.mdx
---
title: U2Gate
description: API reference for qiskit.circuit.library.U2Gate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.U2Gate
---

# U2Gate

<Class id="qiskit.circuit.library.U2Gate" github="https://github.com/qiskit/qiskit/tree/stable/0.45/qiskit/circuit/library/standard_gates/u2.py" signature="qiskit.circuit.library.U2Gate(phi, lam, label=None, *, duration=None, unit='dt')">
  Bases: [`Gate`](qiskit.circuit.Gate "qiskit.circuit.gate.Gate")

  Single-qubit rotation about the X+Z axis.

  Implemented using one X90 pulse on IBM Quantum systems:

  <Admonition title="Warning" type="caution">
    This gate is deprecated. Instead, the following replacements should be used

    $$
    U2(\phi, \lambda) = U\left(\frac{\pi}{2}, \phi, \lambda\right)
    $$

    ```python
    circuit = QuantumCircuit(1)
    circuit.u(pi/2, phi, lambda)
    ```
  </Admonition>

  **Circuit symbol:**

  ```python
       ┌─────────┐
  q_0: ┤ U2(φ,λ) ├
       └─────────┘
  ```

  **Matrix Representation:**

  $$
  U2(\phi, \lambda) = \frac{1}{\sqrt{2}}
      \begin{pmatrix}
          1          & -e^{i\lambda} \\
          e^{i\phi} & e^{i(\phi+\lambda)}
      \end{pmatrix}
  $$

  **Examples:**

  $$
  U2(\phi,\lambda) = e^{i \frac{\phi + \lambda}{2}}RZ(\phi)
  RY\left(\frac{\pi}{2}\right) RZ(\lambda)
  = e^{- i\frac{\pi}{4}} P\left(\frac{\pi}{2} + \phi\right)
  \sqrt{X} P\left(\lambda- \frac{\pi}{2}\right)
  $$

  $$
  U2(0, \pi) = H
  $$

  $$
  U2(0, 0) = RY(\pi/2)
  $$

  $$
  U2(-\pi/2, \pi/2) = RX(\pi/2)
  $$

  <Admonition title="See also" type="note">
    `U3Gate`: U3 is a generalization of U2 that covers all single-qubit rotations, using two X90 pulses.
  </Admonition>

  Create new U2 gate.

  ## Attributes

  ### base\_class

  <Attribute id="qiskit.circuit.library.U2Gate.base_class" name="base_class">
    Get the base class of this instruction. This is guaranteed to be in the inheritance tree of `self`.

    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioural perspective. In particular, you should *not* override [`base_class`](#qiskit.circuit.library.U2Gate.base_class "qiskit.circuit.library.U2Gate.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrised gate with a particular set of parameters for the purposes of distinguishing it in a [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") from the full parametrised gate.

    This is often exactly equivalent to `type(obj)`, except in the case of singleton instances of standard-library instructions. These singleton instances are special subclasses of their base class, and this property will return that base. For example:

    ```python
    >>> isinstance(XGate(), XGate)
    True
    >>> type(XGate()) is XGate
    False
    >>> XGate().base_class is XGate
    True
    ```

    In general, you should not rely on the precise class of an instruction; within a given circuit, it is expected that `Instruction.name` should be a more suitable discriminator in most situations.
  </Attribute>

  ### condition

  <Attribute id="qiskit.circuit.library.U2Gate.condition" name="condition">
    The classical condition on the instruction.
  </Attribute>

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.U2Gate.condition_bits" name="condition_bits">
    Get Clbits in condition.
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.U2Gate.decompositions" name="decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.U2Gate.definition" name="definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.U2Gate.duration" name="duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.U2Gate.label" name="label">
    Return instruction label
  </Attribute>

  ### mutable

  <Attribute id="qiskit.circuit.library.U2Gate.mutable" name="mutable">
    Is this instance is a mutable unique instance or not.

    If this attribute is `False` the gate instance is a shared singleton and is not mutable.
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.U2Gate.name" name="name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.U2Gate.num_clbits" name="num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.U2Gate.num_qubits" name="num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.U2Gate.params" name="params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.U2Gate.unit" name="unit">
    Get the time unit of duration.
  </Attribute>

  ## Methods

  ### inverse

  <Function id="qiskit.circuit.library.U2Gate.inverse" name="inverse" signature="inverse()">
    Return inverted U2 gate.

    $U2(\phi, \lambda)^{\dagger} =U2(-\lambda-\pi, -\phi+\pi)$)
  </Function>
</Class>

